// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. article summary headline component 1`] = `
<style>
.IS1 {
  0: [object Object];
  1: [object Object];
  2: [object Object];
}
</style>

<Text
  accessibilityRole="header"
  aria-level="3"
  className="bigOne IS1"
>
  PM hails breakthrough ahead of key Commons vote
</Text>
`;

exports[`2. article summary strapline component 1`] = `
<style>
.IS1 {
  0: [object Object];
  1: [object Object];
}
</style>

<Text
  accessibilityRole="header"
  aria-level="4"
  className="IS1"
>
  PM hails breakthrough ahead of key Commons vote
</Text>
`;
